<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/weightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/lbl_weight"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/weightInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:width="300dp"
        android:gravity="center_vertical|center_horizontal"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textSize="30sp"
        android:hint="@string/zero"
        android:layout_below="@+id/weightLabel"/>

    <requestFocus />

    <TextView
        android:id="@+id/ouncesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/weightInput"
        android:text="@string/lbl_ounces"/>


</RelativeLayout>